k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinai-ui-service
spec:
  type: NodePort
  selector:
    app: sentinai-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
